replace '.collect(Collectors.toList())' with '.toList()' in method getVillagePopulationAssertionByVillageId